--- a/style.css
+++ b/style.css
@@ -1,32 +1,65 @@
 body {
-    display: flex;
-    justify-content: center;
     width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
+    background-image: url("./assets/img/bg.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #000000;
 }
 
-.mainContainer {
+.wrap {
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    background: rgb(238, 136, 3);
-    color: white;
-    border-radius: 50px;
+    align-items: center;
+    text-align: center;
+
+    /* filter: blur(5px); */
+    border: 3px dotted;
+    /* background: rgba(228, 11, 217, 0.5); */
+    /* width: 600px; */
 }
 
-.header {
-    display: flex;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: 700;
-    color: rgb(250, 246, 11);
+.main {
+    border: 3px dotted;
+    background: rgba(25, 199, 104, 0.5);
+    width: 600px;
+    /* Чтобы занимал оставшееся пространство */
+    flex-grow: 1;
 }
 
-.avatar {
-    display: flex;
-    justify-content: center;
+.footer {
+    border: 3px dotted;
+    background: rgba(163, 29, 29, 0.5);
+    width: 600px;
+    /* Чтобы footer не уменьшался */
+    flex-shrink: 0;
+}
+
+.footer img {
+    /* display: flex; */
+    flex-direction: row;
+    height: 30px;
 }
 
 .avatar img {
-    border-radius: 50px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.header {
+    border: 3px dotted;
+    background: rgba(190, 190, 190, 0.5);
+    /* margin: 20% auto; */
+    /* color: antiquewhite; */
+
+    width: 600px;
+
+}
+
+.header h1 {
+    font-size: 64px;
 }
