--- a/css/menu.css
+++ b/css/menu.css
@@ -18,8 +18,8 @@
 .hidden-menu .blur {
     background-color: rgba(255, 255, 255, 0.1);
     padding: 10px;
-    /* width: 100%; */
-
+    backdrop-filter: blur(3px);
+    border-radius: 10px;
 }
 
 .hidden-menu .menu-item a {
@@ -41,7 +41,9 @@
 
 .btn-menu {
     color: #fff;
-    /* background-color: rgb(243, 9, 9); */
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(3px);
+    border-radius: 5px;
     padding: 5px;
     position: fixed;
     top: 20px;
@@ -66,10 +68,6 @@
 
 .btn-menu span.first {
     margin-top: 0;
-}
-
-.hidden-menu-ticker:checked~.btn-menu {
-    /* left: 160px; */
 }
 
 .hidden-menu-ticker:checked~.hidden-menu {
