--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,14 @@ body {
 }
 
 .header h1 {
-    font-size: 24px;
+    font-size: 36px;
     font-weight: 600;
     letter-spacing: 5px;
     color: white;
     text-shadow: red 1px 3px;
     text-align: center;
     transition: 0.5s;
+    padding-top: 40px;
 }
 
 .header :hover {
@@ -46,8 +47,6 @@ body {
 }
 
 .main {
-    /* border: 3px dotted; */
-    /* background: rgba(25, 199, 104, 0.5); */
     color: antiquewhite;
     display: flex;
     justify-content: center;
@@ -58,73 +57,89 @@ body {
 
 .section {
     width: 400px;
+    padding-top: 40px;
 }
 
 #profile {
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: white;
     size: 10px;
     text-shadow: red 1px 3px;
 }
 
 #profile .avatar img {
+    border: 3px solid;
     height: 200px;
     border-radius: 50%;
     position: relative;
     transition: 0.5s;
+    box-shadow: 0 0 5px 5px rgb(54, 219, 248);
 }
 
 #profile .avatar :hover {
     height: 300px;
+    border: 3px solid white;
+    box-shadow: 0 0 10px 10px rgb(54, 219, 248);
 }
 
 #profile .profession {
-    transition: 0.5s;
+    transition: 0.7s;
+    padding: 10px;
 }
 
 #profile :hover {
     letter-spacing: 10px;
     color: aqua;
+    cursor: pointer;
 }
 
-#profile .test .profession:hover {
-    letter-spacing: 10px;
+.footer {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    color: white;
+    padding: 10px;
+}
+
+.footer .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.footer a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer a:hover {
+    text-decoration: none;
     color: aqua;
 }
 
-
-
-
-.footer {
-    border: 3px dotted;
-    background: rgba(163, 29, 29, 0.5);
-    color: antiquewhite;
-    display: flex;
-    flex: 0 0 auto;
-}
-
-
 .footer img {
-    /* display: flex; */
     flex-direction: row;
-    height: 30px;
+    height: 50px;
+    text-shadow: rgb(47, 208, 219) 1px 3px;
+    text-shadow: red 1px 3px;
+    background-color: rgba(255, 255, 255);
+    backdrop-filter: blur(3px);
+    padding: 10px;
+    border-radius: 10px;
+    transition: .5s;
 }
 
+.footer .container .item img:hover {
 
-
+    background-color: aqua;
+}
 
 @font-face {
     font-family: ZenDots-Regular;
     src: url("../assets/fonts/ZenDots-Regular.ttf");
 }
-
-/* можно испльзовать следующие элементы */
-/* filter: blur(5px); */
-/* прозрачность цвета */
-/* background: rgba(25, 199, 104, 0.5); */
-/* появление изчезновение */
-/* transition: background-image 3s ease-in; */
