--- a/css/slider.css
+++ b/css/slider.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	width: 400px;
 	height: 400px;
-	padding-top: 40px;
+	padding-top: 140px;
 	/* border: rgb(47, 208, 219) dotted 15px;
     border-radius: 50%; */
 	text-align: center;
@@ -30,6 +30,10 @@
 	box-shadow: 0 0 5px 5px rgb(54, 219, 248);
 }
 
+#profile h1 {
+	transition: 0.7s;
+}
+
 #profile .avatar :hover {
 	height: 300px;
 	border: 3px solid white;
@@ -45,4 +49,75 @@
 	letter-spacing: 10px;
 	color: aqua;
 	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 30px;
+	padding: 30px;
+	backdrop-filter: blur(3px);
+
+
 }
+
+#contacts {}
+
+#contacts :hover {
+	/* text-decoration: none;
+	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(3px);
+	border-radius: 30px;
+	padding: 30px;
+	border: aqua 1px solid;
+	list-style-type: none; */
+
+}
+
+#contacts a {
+	/* text-decoration: none;
+	color: aqua;
+	list-style-type: none !important; */
+
+
+
+}
+
+.item ul {
+	list-style-type: none;
+}
+
+.item a {
+
+	list-style-type: none;
+	color: aqua;
+	text-decoration: none;
+
+
+
+}
+
+#skills ul {
+
+	list-style-type: none;
+	margin-left: -40px;
+
+
+}
+
+#courses a {
+	color: aqua;
+	text-decoration: none;
+}
+
+#projects a {
+	color: aqua;
+	text-decoration: none;
+
+}
+
+#contacts :hover {}
+
+.notType {}
+
+/* .listNones :hover {
+	text-shadow: red 1px 3px;
+
+} */
